--- a/scss/00_intrinsic-scss/_01-normalize-selfMade.scss
+++ b/scss/00_intrinsic-scss/_01-normalize-selfMade.scss
@@ -2,7 +2,8 @@
 ---------    Priority: Ultra    -----------
 -----------------------------------------------------*/
 html {
-    font-size: 62.5%; //10px
+    //font-size: 62.5%; //10px
+    font-size: 10px;
     height: 100%;
     
     //Prevents iPhone from resizing in landscape mode
